--- a/Project Code/steam_spy_data_cleaning.ipynb
+++ b/Project Code/steam_spy_data_cleaning.ipynb
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1080,7 +1080,7 @@
        "[5 rows x 450 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1117,7 +1117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1131,7 +1131,7 @@
        "Name: tags, dtype: object"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1158,7 +1158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1172,7 +1172,7 @@
        "Name: owners, dtype: object"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1185,14 +1185,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Bryan\\AppData\\Local\\Temp/ipykernel_19192/258815340.py:2: FutureWarning: The default value of regex will change from True to False in a future version.\n",
+      "C:\\Users\\Schubert\\AppData\\Local\\Temp\\ipykernel_6220\\258815340.py:2: FutureWarning: The default value of regex will change from True to False in a future version.\n",
       "  owners.str.replace(',', '').str.replace(' .. ', '-').head()\n"
      ]
     },
@@ -1207,7 +1207,7 @@
        "Name: owners, dtype: object"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1226,7 +1226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1292,7 +1292,7 @@
     "    # remove unwanted columns\n",
     "    df = df.drop([\n",
     "        'genre', 'developer', 'publisher', 'score_rank', 'userscore', 'average_2weeks',\n",
-    "        'median_2weeks', 'price', 'initialprice', 'discount', 'ccu'\n",
+    "        'median_2weeks', 'discount', 'ccu'\n",
     "    ], axis=1)\n",
     "    \n",
     "    # keep top tags, exporting full tag data to file\n",
@@ -1306,7 +1306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1320,7 +1320,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Bryan\\AppData\\Local\\Temp/ipykernel_19192/3478430256.py:70: FutureWarning: The default value of regex will change from True to False in a future version.\n",
+      "C:\\Users\\Schubert\\AppData\\Local\\Temp\\ipykernel_6220\\37597665.py:70: FutureWarning: The default value of regex will change from True to False in a future version.\n",
       "  df['owners'] = df['owners'].str.replace(',', '').str.replace(' .. ', '-')\n"
      ]
     },
@@ -1352,6 +1352,8 @@
        "      <th>owners</th>\n",
        "      <th>average_forever</th>\n",
        "      <th>median_forever</th>\n",
+       "      <th>price</th>\n",
+       "      <th>initialprice</th>\n",
        "      <th>languages</th>\n",
        "      <th>tags</th>\n",
        "    </tr>\n",
@@ -1366,6 +1368,8 @@
        "      <td>0-20000</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>499.0</td>\n",
+       "      <td>499.0</td>\n",
        "      <td>English</td>\n",
        "      <td>Hand-drawn;2D;Arcade</td>\n",
        "    </tr>\n",
@@ -1378,6 +1382,8 @@
        "      <td>0-20000</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>1699.0</td>\n",
+       "      <td>1699.0</td>\n",
        "      <td>English</td>\n",
        "      <td>Casual;Open World;Management</td>\n",
        "    </tr>\n",
@@ -1390,6 +1396,8 @@
        "      <td>0-20000</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>299.0</td>\n",
+       "      <td>299.0</td>\n",
        "      <td>English, Portuguese - Portugal</td>\n",
        "      <td>Horror;First-Person;Survival Horror</td>\n",
        "    </tr>\n",
@@ -1402,6 +1410,8 @@
        "      <td>0-20000</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>1999.0</td>\n",
+       "      <td>1999.0</td>\n",
        "      <td>English, French, Italian, German, Japanese, Ko...</td>\n",
        "      <td>Horror;First-Person;Atmospheric</td>\n",
        "    </tr>\n",
@@ -1414,6 +1424,8 @@
        "      <td>0-20000</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>499.0</td>\n",
+       "      <td>499.0</td>\n",
        "      <td>English, French, Spanish - Spain</td>\n",
        "      <td>Story Rich;Walking Simulator;Emotional</td>\n",
        "    </tr>\n",
@@ -1429,12 +1441,12 @@
        "9   1433340  Happy's Humble Burger Farm      1009        75  0-20000   \n",
        "13  1433390           To My Best Friend         4         0  0-20000   \n",
        "\n",
-       "    average_forever  median_forever  \\\n",
-       "3                 0               0   \n",
-       "4                 0               0   \n",
-       "8                 0               0   \n",
-       "9                 0               0   \n",
-       "13                0               0   \n",
+       "    average_forever  median_forever   price  initialprice  \\\n",
+       "3                 0               0   499.0         499.0   \n",
+       "4                 0               0  1699.0        1699.0   \n",
+       "8                 0               0   299.0         299.0   \n",
+       "9                 0               0  1999.0        1999.0   \n",
+       "13                0               0   499.0         499.0   \n",
        "\n",
        "                                            languages  \\\n",
        "3                                             English   \n",
@@ -1451,7 +1463,7 @@
        "13  Story Rich;Walking Simulator;Emotional  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1464,7 +1476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -2247,7 +2259,7 @@
        "[5 rows x 451 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2266,7 +2278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -2279,12 +2291,14 @@
        "owners             0\n",
        "average_forever    0\n",
        "median_forever     0\n",
+       "price              0\n",
+       "initialprice       0\n",
        "languages          0\n",
        "tags               0\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2296,7 +2310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2393,7 +2407,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
