--- a/Project Code/steam_spy_data_cleaning.ipynb
+++ b/Project Code/steam_spy_data_cleaning.ipynb
@@ -245,7 +245,7 @@
     }
    ],
    "source": [
-    "raw_steam_spy_data = pd.read_csv('../Data/steam_spy_data.csv')\n",
+    "raw_steam_spy_data = pd.read_csv('../Data/Raw/steam_spy_data.csv')\n",
     "raw_steam_spy_data.head()"
    ]
   },
@@ -2393,7 +2393,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.10.6 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -2407,7 +2407,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.10.6"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "26de051ba29f2982a8de78e945f0abaf191376122a1563185a90213a26c5da77"
+   }
   }
  },
  "nbformat": 4,
