added genre to steam spy, 3 cols changed to lists

--- a/Project Code/steam_spy_data_cleaning.ipynb
+++ b/Project Code/steam_spy_data_cleaning.ipynb
@@ -1117,7 +1117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1126,12 +1126,12 @@
        "0                             NaN\n",
        "1                             NaN\n",
        "2                             NaN\n",
-       "3            Hand-drawn;2D;Arcade\n",
-       "4    Casual;Open World;Management\n",
+       "3            Hand-drawn,2D,Arcade\n",
+       "4    Casual,Open World,Management\n",
        "Name: tags, dtype: object"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1142,7 +1142,7 @@
     "    x = literal_eval(x)\n",
     "\n",
     "    if isinstance(x, dict):\n",
-    "        return ';'.join(list(x.keys())[:3])\n",
+    "        return ','.join(list(x.keys())[:3])\n",
     "    else:\n",
     "        return np.nan\n",
     "    \n",
@@ -1158,7 +1158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1172,7 +1172,7 @@
        "Name: owners, dtype: object"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1185,14 +1185,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Schubert\\AppData\\Local\\Temp\\ipykernel_6220\\258815340.py:2: FutureWarning: The default value of regex will change from True to False in a future version.\n",
+      "C:\\Users\\Schubert\\AppData\\Local\\Temp\\ipykernel_27736\\258815340.py:2: FutureWarning: The default value of regex will change from True to False in a future version.\n",
       "  owners.str.replace(',', '').str.replace(' .. ', '-').head()\n"
      ]
     },
@@ -1207,7 +1207,7 @@
        "Name: owners, dtype: object"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1226,7 +1226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1268,7 +1268,7 @@
     "        x = literal_eval(x)\n",
     "        \n",
     "        if isinstance(x, dict):\n",
-    "            return ';'.join(list(x.keys())[:3])\n",
+    "            return ','.join(list(x.keys())[:3])\n",
     "        else:\n",
     "            return np.nan\n",
     "    \n",
@@ -1287,11 +1287,12 @@
     "    df = df[(df['name'].notnull()) & (df['name'] != 'none')]\n",
     "    df = df[df['developer'].notnull()]\n",
     "    df = df[df['languages'].notnull()]\n",
+    "    df = df[df['genre'].notnull()]\n",
     "    df = df[df['price'].notnull()]\n",
     "    \n",
     "    # remove unwanted columns\n",
     "    df = df.drop([\n",
-    "        'genre', 'developer', 'publisher', 'score_rank', 'userscore', 'average_2weeks',\n",
+    "        'developer', 'publisher', 'score_rank', 'userscore', 'average_2weeks',\n",
     "        'median_2weeks', 'discount', 'ccu'\n",
     "    ], axis=1)\n",
     "    \n",
@@ -1301,12 +1302,16 @@
     "    # reformat owners column\n",
     "    df['owners'] = df['owners'].str.replace(',', '').str.replace(' .. ', '-')\n",
     "    \n",
+    "    # reformat 3 cols for stanadrdization\n",
+    "    for x in ['genre', 'languages', 'tags']:\n",
+    "        df[x] = df[x].str.split(',')\n",
+    "    \n",
     "    return df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1320,7 +1325,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Schubert\\AppData\\Local\\Temp\\ipykernel_6220\\37597665.py:70: FutureWarning: The default value of regex will change from True to False in a future version.\n",
+      "C:\\Users\\Schubert\\AppData\\Local\\Temp\\ipykernel_27736\\1157127289.py:71: FutureWarning: The default value of regex will change from True to False in a future version.\n",
       "  df['owners'] = df['owners'].str.replace(',', '').str.replace(' .. ', '-')\n"
      ]
     },
@@ -1355,6 +1360,7 @@
        "      <th>price</th>\n",
        "      <th>initialprice</th>\n",
        "      <th>languages</th>\n",
+       "      <th>genre</th>\n",
        "      <th>tags</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -1370,8 +1376,9 @@
        "      <td>0</td>\n",
        "      <td>499.0</td>\n",
        "      <td>499.0</td>\n",
-       "      <td>English</td>\n",
-       "      <td>Hand-drawn;2D;Arcade</td>\n",
+       "      <td>[English]</td>\n",
+       "      <td>[Indie]</td>\n",
+       "      <td>[Hand-drawn, 2D, Arcade]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -1384,8 +1391,9 @@
        "      <td>0</td>\n",
        "      <td>1699.0</td>\n",
        "      <td>1699.0</td>\n",
-       "      <td>English</td>\n",
-       "      <td>Casual;Open World;Management</td>\n",
+       "      <td>[English]</td>\n",
+       "      <td>[Casual,  Indie,  Early Access]</td>\n",
+       "      <td>[Casual, Open World, Management]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
@@ -1398,8 +1406,9 @@
        "      <td>0</td>\n",
        "      <td>299.0</td>\n",
        "      <td>299.0</td>\n",
-       "      <td>English, Portuguese - Portugal</td>\n",
-       "      <td>Horror;First-Person;Survival Horror</td>\n",
+       "      <td>[English,  Portuguese - Portugal]</td>\n",
+       "      <td>[Action,  Adventure,  Indie]</td>\n",
+       "      <td>[Horror, First-Person, Survival Horror]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
@@ -1412,8 +1421,9 @@
        "      <td>0</td>\n",
        "      <td>1999.0</td>\n",
        "      <td>1999.0</td>\n",
-       "      <td>English, French, Italian, German, Japanese, Ko...</td>\n",
-       "      <td>Horror;First-Person;Atmospheric</td>\n",
+       "      <td>[English,  French,  Italian,  German,  Japanes...</td>\n",
+       "      <td>[Action,  Adventure,  Indie,  Simulation]</td>\n",
+       "      <td>[Horror, First-Person, Atmospheric]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
@@ -1426,8 +1436,9 @@
        "      <td>0</td>\n",
        "      <td>499.0</td>\n",
        "      <td>499.0</td>\n",
-       "      <td>English, French, Spanish - Spain</td>\n",
-       "      <td>Story Rich;Walking Simulator;Emotional</td>\n",
+       "      <td>[English,  French,  Spanish - Spain]</td>\n",
+       "      <td>[Indie]</td>\n",
+       "      <td>[Story Rich, Walking Simulator, Emotional]</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1449,21 +1460,28 @@
        "13                0               0   499.0         499.0   \n",
        "\n",
        "                                            languages  \\\n",
-       "3                                             English   \n",
-       "4                                             English   \n",
-       "8                      English, Portuguese - Portugal   \n",
-       "9   English, French, Italian, German, Japanese, Ko...   \n",
-       "13                   English, French, Spanish - Spain   \n",
+       "3                                           [English]   \n",
+       "4                                           [English]   \n",
+       "8                   [English,  Portuguese - Portugal]   \n",
+       "9   [English,  French,  Italian,  German,  Japanes...   \n",
+       "13               [English,  French,  Spanish - Spain]   \n",
        "\n",
-       "                                      tags  \n",
-       "3                     Hand-drawn;2D;Arcade  \n",
-       "4             Casual;Open World;Management  \n",
-       "8      Horror;First-Person;Survival Horror  \n",
-       "9          Horror;First-Person;Atmospheric  \n",
-       "13  Story Rich;Walking Simulator;Emotional  "
+       "                                        genre  \\\n",
+       "3                                     [Indie]   \n",
+       "4             [Casual,  Indie,  Early Access]   \n",
+       "8                [Action,  Adventure,  Indie]   \n",
+       "9   [Action,  Adventure,  Indie,  Simulation]   \n",
+       "13                                    [Indie]   \n",
+       "\n",
+       "                                          tags  \n",
+       "3                     [Hand-drawn, 2D, Arcade]  \n",
+       "4             [Casual, Open World, Management]  \n",
+       "8      [Horror, First-Person, Survival Horror]  \n",
+       "9          [Horror, First-Person, Atmospheric]  \n",
+       "13  [Story Rich, Walking Simulator, Emotional]  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1476,7 +1494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -2259,7 +2277,7 @@
        "[5 rows x 451 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2278,7 +2296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -2294,11 +2312,12 @@
        "price              0\n",
        "initialprice       0\n",
        "languages          0\n",
+       "genre              0\n",
        "tags               0\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2310,90 +2329,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
     "# export data set\n",
     "steam_spy_data.to_csv('../Data/steam_spy_clean.csv', index=False)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Incomplete, waiting for progress"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# read and merge data\n",
-    "steam_data = pd.read_csv('../Data/steam_data_clean.csv') # need wait for steam app clean data\n",
-    "    \n",
-    "merged_data = steam_data.merge(steamspy_data, left_on='steam_appid', right_on='appid', suffixes=('', '_steamspy'))\n",
-    "merged_data.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# remove overlapping columns\n",
-    "steam_clean = merged.drop(['name_steamspy', 'languages', 'steam_appid'], axis=1)\n",
-    "\n",
-    "# reindex to reorder columns\n",
-    "steam_clean = steam_clean[[\n",
-    "    'appid',\n",
-    "    'name',\n",
-    "    'release_date',\n",
-    "    'english',\n",
-    "    'developer',\n",
-    "    'publisher',\n",
-    "    'platforms',\n",
-    "    'required_age',\n",
-    "    'categories',\n",
-    "    'genres',\n",
-    "    'tags',\n",
-    "    'achievements',\n",
-    "    'positive',\n",
-    "    'negative',\n",
-    "    'average_forever',\n",
-    "    'median_forever',\n",
-    "    'owners',\n",
-    "    'price'\n",
-    "]]\n",
-    "\n",
-    "steam_clean = steam_clean.rename({\n",
-    "    'tags': 'steamspy_tags',\n",
-    "    'positive': 'positive_ratings',\n",
-    "    'negative': 'negative_ratings',\n",
-    "    'average_forever': 'average_playtime',\n",
-    "    'median_forever': 'median_playtime'\n",
-    "}, axis=1)\n",
-    "\n",
-    "steam_clean.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Finally export clean dataset\n",
-    "steam_clean.to_csv('../data/steam_clean.csv', index=False)"
-   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.6 64-bit",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -2407,7 +2354,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.8.12"
   },
   "vscode": {
    "interpreter": {
