--- a/Project Code/steam_data_preprocessing.ipynb
+++ b/Project Code/steam_data_preprocessing.ipynb
@@ -3,6 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "d166354e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,6 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "d4c506f1",
    "metadata": {},
    "outputs": [
     {
@@ -346,6 +348,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "de9b3d22",
    "metadata": {
     "scrolled": true
    },
@@ -693,6 +696,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "b7ab7aea",
    "metadata": {},
    "outputs": [
     {
@@ -745,6 +749,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "6a8759cd",
    "metadata": {},
    "outputs": [
     {
@@ -1006,6 +1011,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "30008290",
    "metadata": {},
    "source": [
     "### Drop columns"
@@ -1014,6 +1020,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "bb4d8d32",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1024,6 +1031,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f8f25b30",
    "metadata": {},
    "source": [
     "### Format column types"
@@ -1032,6 +1040,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
+   "id": "5fd79b74",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1054,6 +1063,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
+   "id": "92dd7794",
    "metadata": {},
    "outputs": [
     {
@@ -1087,6 +1097,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
+   "id": "0887c7f2",
    "metadata": {},
    "outputs": [
     {
@@ -1115,6 +1126,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "4ebfec99",
    "metadata": {},
    "source": [
     "### Feature Engineering"
@@ -1123,6 +1135,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
+   "id": "298ae3c0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1139,6 +1152,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
+   "id": "6a941d89",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1157,6 +1171,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
+   "id": "f72a6c60",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1167,6 +1182,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
+   "id": "47376536",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1181,6 +1197,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
+   "id": "d1ca5629",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1191,6 +1208,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
+   "id": "7b22b9a2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1202,6 +1220,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
+   "id": "0250737b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1212,6 +1231,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
+   "id": "ef883ac5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1222,6 +1242,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
+   "id": "40168b90",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1235,6 +1256,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
+   "id": "7bb8ca07",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1246,6 +1268,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
+   "id": "09165cf9",
    "metadata": {},
    "outputs": [
     {
@@ -1766,6 +1789,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
+   "id": "6307dd86",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1801,6 +1825,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "bd208993",
    "metadata": {},
    "source": [
     "### Outlier detection"
@@ -1809,6 +1834,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
+   "id": "1ff665fd",
    "metadata": {},
    "outputs": [
     {
@@ -1846,6 +1872,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
+   "id": "0e40a9d2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1857,6 +1884,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c7c72e8a",
    "metadata": {},
    "source": [
     "### Train Test split\n",
@@ -1866,6 +1894,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
+   "id": "78a1b247",
    "metadata": {},
    "outputs": [
     {
@@ -1893,6 +1922,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0007e605",
    "metadata": {},
    "source": [
     "### Exploratory Data Analysis"
@@ -1901,6 +1931,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
+   "id": "3ce2a562",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1910,6 +1941,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
+   "id": "d3da6f62",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1943,6 +1975,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
+   "id": "ea306bcb",
    "metadata": {},
    "outputs": [
     {
@@ -1968,6 +2001,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
+   "id": "6b9209fa",
    "metadata": {},
    "outputs": [
     {
@@ -2065,6 +2099,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
+   "id": "50e16059",
    "metadata": {},
    "outputs": [
     {
@@ -2088,6 +2123,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
+   "id": "8c694b90",
    "metadata": {
     "scrolled": false
    },
@@ -2114,6 +2150,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
+   "id": "e4293c66",
    "metadata": {},
    "outputs": [
     {
@@ -2146,6 +2183,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
+   "id": "baa87b8c",
    "metadata": {},
    "outputs": [
     {
@@ -2183,6 +2221,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
+   "id": "6da25c97",
    "metadata": {},
    "outputs": [
     {
@@ -2208,6 +2247,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
+   "id": "5be792d8",
    "metadata": {},
    "outputs": [
     {
@@ -2233,6 +2273,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
+   "id": "06592905",
    "metadata": {},
    "outputs": [
     {
@@ -2267,6 +2308,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
+   "id": "86e65124",
    "metadata": {},
    "outputs": [
     {
@@ -2291,6 +2333,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
+   "id": "2dd05257",
    "metadata": {},
    "outputs": [
     {
@@ -2314,6 +2357,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
+   "id": "7b8de3fe",
    "metadata": {},
    "outputs": [
     {
@@ -2337,6 +2381,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
+   "id": "70f14cbe",
    "metadata": {},
    "outputs": [
     {
@@ -2372,6 +2417,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
+   "id": "ac7f1339",
    "metadata": {},
    "outputs": [
     {
@@ -2399,6 +2445,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8138cf7e",
    "metadata": {},
    "source": [
     "### One hot encoding"
@@ -2407,6 +2454,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
+   "id": "6f67ea48",
    "metadata": {},
    "outputs": [
     {
@@ -2441,6 +2489,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
+   "id": "1032b20a",
    "metadata": {},
    "outputs": [
     {
@@ -2460,6 +2509,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
+   "id": "a3b07313",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2469,6 +2519,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a9104656",
    "metadata": {},
    "source": [
     "### Handling missing values"
@@ -2477,6 +2528,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
+   "id": "8a469c38",
    "metadata": {},
    "outputs": [
     {
@@ -2499,6 +2551,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
+   "id": "4258868a",
    "metadata": {},
    "outputs": [
     {
@@ -2529,6 +2582,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9e671801",
    "metadata": {},
    "source": [
     "### Removing outliers"
@@ -2537,6 +2591,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
+   "id": "b7c53be6",
    "metadata": {},
    "outputs": [
     {
@@ -2562,6 +2617,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
+   "id": "1df28c04",
    "metadata": {},
    "outputs": [
     {
@@ -2637,6 +2693,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "da274319",
    "metadata": {},
    "source": [
     "### Remove correlated variables"
@@ -2645,6 +2702,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
+   "id": "1d0f989e",
    "metadata": {},
    "outputs": [
     {
@@ -2799,6 +2857,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
+   "id": "45886849",
    "metadata": {},
    "outputs": [
     {
@@ -2825,6 +2884,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
+   "id": "e2ba4741",
    "metadata": {},
    "outputs": [
     {
@@ -2850,6 +2910,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
+   "id": "2b561641",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2859,6 +2920,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f0e6ef37",
    "metadata": {},
    "source": [
     "### Scale numerical columns"
@@ -2867,6 +2929,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
+   "id": "7f1922c1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2885,6 +2948,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
+   "id": "56705093",
    "metadata": {},
    "outputs": [
     {
@@ -2908,6 +2972,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
+   "id": "de520a17",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2921,7 +2986,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -2935,7 +3000,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.9.0"
   },
   "vscode": {
    "interpreter": {
